--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,32 @@
+asgiref==3.2.7
+astroid==2.3.3
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+colorama==0.4.3
+dj-database-url==0.5.0
+Django==3.0.5
+django-heroku==0.3.1
+Flask==1.1.1
+future==0.18.2
+gunicorn==20.0.4
+idna==2.9
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+psycopg2==2.8.5
+PyJWT==1.7.1
+pylint==2.4.4
+pytz==2019.3
 requests==2.23.0
+requests-toolbelt==0.9.1
+six==1.14.0
+sqlparse==0.3.1
+urllib3==1.25.8
 webexteamssdk==1.2
-
+Werkzeug==1.0.0
+whitenoise==5.0.1
+wrapt==1.11.2
